Fix and find text wrapping issues and body tag issues

--- a/app/assets/stylesheets/main_display.scss
+++ b/app/assets/stylesheets/main_display.scss
@@ -35,7 +35,7 @@
 }
 .messages-container {
   display: flex;
-  width: 100%;
+
   height: 100%;
   background-color: #FFFFFF;
 
@@ -51,4 +51,10 @@
 
   width: 100%;
   height: 80px;
+}
+.channel-information {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
