--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -2,18 +2,19 @@
 .form-container {
   background-color: #F9F9F9;
   width: 100%;
-  height: 100%;
+  // height: 100vh;
   // height: 130vh;
 
 
-  display: flex;
+  display: block;
   flex-direction: column;
 }
+
 .session-form {
   display: flex;
   flex-direction: column;
   // position: relative;
-  top: 85px;
+  // top: 85px;
   width: 630px;
   // height: 600px;
   border: 1px solid #E8E8E8;
